<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">programming_s_to_do</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_personality">Personality</string>
  <string name="lbl_tt_mm_yy">tt/mm/yy</string>
  <string name="lbl_edit_photo">Edit Photo</string>
  <string name="lbl_last_name2">Last Name</string>
  <string name="lbl_your_email">Your Email</string>
  <string name="lbl_next">Next</string>
  <string name="lbl_indonesian">Indonesian|</string>
  <string name="lbl_english">English</string>
  <string name="lbl_adalahalcana">AdalahAlcana|</string>
  <string name="lbl_adalah">Adalah</string>
  <string name="lbl_indonesian2">Indonesian</string>
  <string name="msg_don_t_have_an_account">Don\u2019t have an account?</string>
  <string name="lbl_date_of_birth">Date of birth</string>
  <string name="lbl_first_name">First name</string>
  <string name="msg_already_have_an">Already have an account?</string>
  <string name="lbl_country">Country</string>
  <string name="msg_lorem_ipsum_dolor2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fermentum netus amet risus commodo amet vulputate tellus. Et quis ornare sed diam in. Id nibh mattis quis fermentum non malesuada. Vel ullamcorper lacus, mollis pellentesque egestas aliquet aliquam. Risus lorem velit, nunc id ornare diam. Odio diam egestas vulputate tristique mi aliquam eget. Feugiat mi sed semper faucibus tellus aliquam nulla ullamcorper arcu. Est in risus pulvinar arcu pretium dui eget pretium. Nunc, sed scelerisque id varius.
Vulputate vel aliquam suscipit vitae, nullam pretium. Ut sed elementum eget id pellentesque. Odio placerat faucibus purus rhoncus, pharetra commodo. Augue a duis vitae tempor lobortis. Aliquam nunc amet fermentum, aliquet elementum ac neque, convallis. Fames nulla ornare diam odio enim. Enim, pellentesque </string>
  <string name="lbl_first_name2">First Name</string>
  <string name="lbl_email2">Email</string>
  <string name="lbl_e_mail">E-mail</string>
  <string name="lbl_today">Today</string>
  <string name="lbl_28_may_2002">28 May 2002|</string>
  <string name="lbl_log_out">Log Out</string>
  <string name="lbl_setting">Setting</string>
  <string name="msg_helping_others_means">Helping others means helping yourself. </string>
  <string name="msg_make_a_wish_list">Make a wish list</string>
  <string name="msg_our_community_is">our community is ready to help you to join our best platform</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="msg_lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
  <string name="lbl_change_save">Change save</string>
  <string name="msg_forgot_password">Forgot Password?</string>
  <string name="msg_if_you_are_always">If you are always helping others you are helping yourself too</string>
  <string name="lbl_hobby">Hobby</string>
  <string name="lbl_username">UserName</string>
  <string name="msg_research_product">Research Product</string>
  <string name="lbl_attachments">Attachments</string>
  <string name="lbl_task_todo">Task todo</string>
  <string name="lbl_save">Save</string>
  <string name="lbl_02_april_2021">02 April 2021</string>
  <string name="msg_terms_and_conditions">Terms and Conditions</string>
  <string name="msg_your_settings_so">Your settings so that we are comfortable</string>
  <string name="lbl_date">Date</string>
  <string name="lbl_fourta">Fourta|</string>
  <string name="lbl_start">Start</string>
  <string name="msg_when_community_comes">When community comes unity</string>
  <string name="msg_joined_6_month_ago">Joined 6 Month Ago</string>
  <string name="lbl_last_name">Last name</string>
  <string name="lbl_maximum_10_mb">maximum 10 mb</string>
  <string name="lbl_work_today_s2">Work Today\u2019s</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_sleep">Sleep|</string>
  <string name="lbl_alcanasatre">Alcanasatre</string>
  <string name="msg_create_action_mobile">Create Action Mobile</string>
  <string name="lbl_forgot_password">Forgot Password</string>
  <string name="msg_make_your_job_easier">Make your job easier with our reminders</string>
  <string name="lbl_password">Password</string>
  <string name="msg_our_community_is3">"Our community is your community too so let's strengthen our community together"</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_signup2">SignUp</string>
  <string name="msg_our_community_is2">"Our community is always there 24 hours if you need it, don't hesitate to join"</string>
  <string name="msg_this_is_your_community">this is your community, help them to grow more</string>
  <string name="lbl_work_today_s">"Work Today's"</string>
  <string name="lbl_language">Language</string>
  <string name="lbl_get_in_through">Get in through</string>
  <string name="msg_create_action_plan">Create Action Plan</string>
  <string name="msg_welcome_to_our_community">Welcome to our community</string>
</resources>
