<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupVM" type="com.programmingstodo.app.modules.signup.data.viewmodel.SignupVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSixteen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;gray_50_01&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_border_name_black_900_radius_7"
                    android:id="@+id/btnArrowLeft"
                    android:layout_gravity="top"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:paddingHorizontal="@dimen/_6pxh"
                    android:paddingVertical="@dimen/_6pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrow_left" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPersonality"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{signupVM.signupModel.txtPersonality}"
                    style="@style/txtPoppinssemibold18" tools:text="@string/lbl_sign_up"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollView"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearSignUp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearPageHeader"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:id="@+id/txtWhenCommunityComes"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:text="@{signupVM.signupModel.txtWhenCommunityComes}"
                        style="@style/txtPoppinsbold34" tools:text="@string/msg_when_community_comes"/>
                    <TextView android:id="@+id/txtDuration"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:text="@{signupVM.signupModel.txtDuration}"
                        style="@style/txtPoppinsregular12_1" tools:text="@string/msg_our_community_is2"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageLogo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_120pxh"
                    android:layout_width="@dimen/_114pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_logo_gray_50_01_120x114"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logo_gray_50_01_120x114"/>
                <EditText
                    android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/lbl_first_name"
                    android:id="@+id/etFirstName"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_28pxh"
                    android:paddingStart="@dimen/_28pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etFirstNameValue}"
                    android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/lbl_last_name"
                    android:id="@+id/etLastName"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etLastNameValue}"
                    android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/lbl_e_mail"
                    android:id="@+id/etEmail" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etEmailValue}"
                    android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etPasswordValue}"
                    android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:ignore="Autofill"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtLoremIpsumDolor"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:text="@{signupVM.signupModel.txtLoremIpsumDolor}"
                    style="@style/txtPoppinsmedium12" tools:text="@string/msg_lorem_ipsum_dolor"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/rectangle_bg_name_primary_radius_14"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:gravity="center" android:id="@+id/btnNext"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_next"
                    android:textAllCaps="false"
                    android:textColor="@color/{&quot;name&quot;:&quot;white_A700&quot;}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:text="@string/lbl_next"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearAlreadyHaveAn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:id="@+id/txtConfirmation"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtConfirmation}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/msg_already_have_an"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLogin"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtLogin}"
                        style="@style/txtPoppinssemibold12" tools:text="@string/lbl_login"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
