<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.programmingstodo.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:id="@+id/linearNineteen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;white_A700&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_border_name_black_900_radius_7"
                    android:id="@+id/btnArrowLeft"
                    android:layout_gravity="top"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:paddingHorizontal="@dimen/_6pxh"
                    android:paddingVertical="@dimen/_6pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrow_left" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPersonality"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtPersonality}"
                    style="@style/txtPoppinssemibold18" tools:text="@string/lbl_login"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollView"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearLogin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearPageHeader"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:id="@+id/txtThisIsYourCommunity"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:text="@{loginVM.loginModel.txtThisIsYourCommunity}"
                        style="@style/txtPoppinsbold34" tools:text="@string/msg_this_is_your_community"/>
                    <TextView android:id="@+id/txtOurCommunityIs"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:text="@{loginVM.loginModel.txtOurCommunityIs}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/msg_our_community_is3"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageLogo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_113pxh"
                    android:layout_width="@dimen/_116pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_logo_gray_50_01_113x116"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logo_gray_50_01_113x116"/>
                <EditText
                    android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_14"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/lbl_email2"
                    android:id="@+id/etEmail" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etEmailValue}"
                    android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_14"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etPasswordValue}"
                    android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotPasswor"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtForgotPasswor}"
                    style="@style/txtPoppinssemibold12" tools:text="@string/msg_forgot_password"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/rectangle_bg_name_primary_radius_14"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:gravity="center" android:id="@+id/btnNext"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_next"
                    android:textAllCaps="false"
                    android:textColor="@color/{&quot;name&quot;:&quot;white_A700&quot;}"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:text="@string/lbl_next"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearDonTHaveAnAccount"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:gravity="top"
                        android:id="@+id/txtConfirmation"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtConfirmation}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/msg_don_t_have_an_account"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSignUp"
                        android:layout_gravity="bottom"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtSignUp}"
                        style="@style/txtPoppinssemibold12" tools:text="@string/lbl_signup2"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
