<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.programmingstodo.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:id="@+id/linearTwentyThree"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_29pxv"
        android:paddingTop="@dimen/_29pxv" style="@style/groupStyle{&quot;name&quot;:&quot;white_A700&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_border_name_black_900_radius_7"
                    android:id="@+id/btnArrowLeft"
                    android:layout_gravity="top"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:paddingHorizontal="@dimen/_6pxh"
                    android:paddingVertical="@dimen/_6pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrow_left" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPersonality"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{forgotPasswordVM.forgotPasswordModel.txtPersonality}"
                    style="@style/txtPoppinssemibold18" tools:text="@string/lbl_forgot_password"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearForgotPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_22pxv"
            android:paddingEnd="@dimen/_31pxh"
            android:paddingStart="@dimen/_31pxh" android:paddingTop="@dimen/_22pxv">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearPageHeader"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:id="@+id/txtHelpingOthersMeans"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_10pxh"
                    android:text="@{forgotPasswordVM.forgotPasswordModel.txtHelpingOthersMeans}"
                    style="@style/txtPoppinsbold34" tools:text="@string/msg_helping_others_means"/>
                <TextView android:id="@+id/txtIfYouAreAlways"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:text="@{forgotPasswordVM.forgotPasswordModel.txtIfYouAreAlways}"
                    style="@style/txtPoppinsmedium12" tools:text="@string/msg_if_you_are_always"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageLogo"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_121pxh"
                android:layout_width="@dimen/_135pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_logo_gray_50_01_121x135"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logo_gray_50_01_121x135"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotPassword"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtForgotPassword}"
                style="@style/txtPoppinssemibold18" tools:text="@string/lbl_forgot_password"/>
            <EditText
                android:background="@drawable/rectangle_border_name_onprimary_opacity_0_1_radius_10"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:hint="@string/lbl_your_email"
                android:id="@+id/etEmail" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingEnd="@dimen/_24pxh"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"
                android:text="@={forgotPasswordVM.forgotPasswordModel.etEmailValue}"
                android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                android:textColorHint="@color/{&quot;name&quot;:&quot;onPrimary&quot;,&quot;opacity&quot;:0.4}"
                android:textFontWeight="500"
                android:textSize="@dimen/_14pxh"
                android:textStyle="bold" tools:ignore="Autofill"/>
            <TextView android:gravity="start"
                android:id="@+id/txtLoremIpsumDolor"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtLoremIpsumDolor}"
                style="@style/txtPoppinsregular12" tools:text="@string/msg_lorem_ipsum_dolor"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/rectangle_bg_name_primary_radius_14"
            android:ellipsize="end" android:fontFamily="@font/poppins"
            android:gravity="center" android:id="@+id/btnStart"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_60pxv"
            android:layout_width="@dimen/_311pxh"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_start" android:textAllCaps="false"
            android:textColor="@color/{&quot;name&quot;:&quot;white_A700&quot;}"
            android:textFontWeight="500"
            android:textSize="@dimen/_14pxh" android:textStyle="bold" tools:text="@string/lbl_start"/>
    </LinearLayout>
</layout>
